Fixes issue #5